fix minor spacing issues

--- a/doc/site/src/ratpack/public/css/base.css
+++ b/doc/site/src/ratpack/public/css/base.css
@@ -1,7 +1,35 @@
+@import url('https://fonts.googleapis.com/css?family=Maven+Pro');
+h1,
+h2,
+h3,
+h4,
+h5,
+p {
+    font-family: 'Maven Pro', sans-serif;
+}
+
+p {
+    font-size: 16px;
+}
+
 .logo-header {
     margin: 30px;
+    margin-top: 50px;
 }
 
 .ui[class*="quadruple spaced"].image {
     margin: 20px;
+}
+
+.ui.medium.images .image,
+.ui.medium.images img,
+.ui.medium.images svg,
+.ui.medium.image {
+    width: 200px;
+    height: auto;
+    font-size: 1rem;
+}
+
+.ui.images>img.offset-next {
+    margin-top: 20px;
 }
